# mcp-linux-infra

./: .gitattributes  CHANGELOG-AUTHORIZATION.md  CHANGELOG.md  CLAUDE-DESKTOP-SETUP.md  COMMAND-ANALYSIS.md  DEPLOYMENT-READY.md  DOCS-INDEX.md  INSTALL.md  PLUGINS.md  PROJECT-SUMMARY.md  QUICK-DEPLOY.md  README.md  SETUP-FINAL.md  SSH-AGENT-SETUP.md  TROUBLESHOOTING.md  claude-desktop-config-example.json  claude-desktop-config-final.json  claude-desktop-config.json  deploy.sh  fix-annotations.py  load-keys.ps1  pyproject.toml  setup-ssh-agent-windows.ps1  test-agent-access.ps1  test-authorization.py  test-final.ps1  test-import.py  test-installation.ps1  test-integrity.sh  test-mcp-protocol.py  test-mcp-startup.ps1  test-ssh-agent.sh  test-startup-error.ps1  test-system.sh  verify-ready.ps1
ansible/playbooks/: deploy-mcp-infra.yml
config/: command-whitelist.example.yml
docs/: ARCHITECTURE.md  COMMAND-AUTHORIZATION.md  PRA-PROCEDURES.md  QUICKSTART.md  SECURITY.md  SSH-AGENT-SECURITY.md
examples/: ansible-compose.yml  dns-stack-compose.yml
examples/caddy/: Caddyfile
examples/unbound/: unbound.conf
logs/: command_stats.json
scripts/: rename_pra_to_exec.py
src/mcp_linux_infra/: __init__.py  audit.py  config.py  server.py
src/mcp_linux_infra/analysis/: __init__.py  auto_learning.py  command_analysis.py
src/mcp_linux_infra/authorization/: __init__.py  engine.py  models.py  whitelist.py
system/: pra-run
system/sudoers.d/: pra-runner
system/wrappers/: mcp-wrapper  pra-exec
tests/: test_auto_learning.py  test_command_analysis.py  test_plugins.py
(+38 files in other folders)
